--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,8 +8,7 @@
 
   <body>
     <h1>Books</h1>
-    <% @books.each do |book| %>
-    <table>
+     <table>
       <thead>
         <tr>
           <th>title</th>
@@ -17,22 +16,25 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-
-      <tbody>
+    <tbody>
+    <% @books.each do |book| %>
+      <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
         <td>
-          <a href ="/books/#{book.id}">Show</a>
+          <%= link_to "Show", book_path(book.id) %>
         </td>
         <td>
-          <a href ="/books/#{book.id}/edit">Edit</a>
+          <%= link_to "Edit", edit_book_path(book.id.edit)  %>
         </td>
-        <td>Destroy</td>
-      </tbody>
+        <td> Destroy</td>
+      </tr>
     <% end %>
+     </tbody>
+    </table>
 
     <h2>New book</h2>
-    <form>
+
     <%= form_with model: @book do |f| %>
       <h4>Title</h4>
       <%= f.text_field :title %>
@@ -44,7 +46,8 @@
       <%= f.submit 'Create Book' %>
       </h4>
     <% end %>
-    </form>
+
 
    </body>
+
   </html>
