--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,16 +5,21 @@
   </head>
 
   <body>
-    <span>
+    <p class="notice">
+      <%= notice %>
+    </p>
+    <p>
       <strong>Title:</strong>
       <%= @book.title %>
-    </span>
+    </p>
     <p>
       <strong>Body:</strong>
       <%= @book.body %>
     </p>
-    <a href = "/books/#{book.id}/edit">Edit</a>
+    <div>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
     |
-    <a href = "/books">Back</a>
+    <%= link_to "Back", books_path(@books) %>
+    </div>
   </body>
 </html>
