--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,8 +7,17 @@
   <body>
 
   <h1>Editing Book</h1>
+  <% if @book.errors.any? %>
+      <%= @book.errors.count %> errors prohibited this book from being saved:
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+  <% end %>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+
 
     <p>Title<br>
     <%= f.text_field :title %>
@@ -22,10 +31,12 @@
     </p>
 
     <% end %>
+  
 
-    <%= link_to "Show", book_path(book.id) %>
+    <%= link_to "Show", book_path(@book.id) %>
     |
-    <a href = "/books">Back</a>
+    <%= link_to "Back", books_path(@books) %>
+  
   </body>
 
 </html>
