--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <p class="notice">
+      <%= notice %>
+
     <h1>Books</h1>
      <table>
       <thead>
@@ -25,29 +28,40 @@
           <%= link_to "Show", book_path(book.id) %>
         </td>
         <td>
-          <%= link_to "Edit", edit_book_path(book.id.edit)  %>
+          <%= link_to "Edit", edit_book_path(book.id) %>
         </td>
-        <td> Destroy</td>
+        <td>
+          <%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+        </td>
       </tr>
     <% end %>
      </tbody>
     </table>
 
     <h2>New book</h2>
+    <% if @book.errors.any? %>
+      <%= @book.errors.count %> errors prohibited this book from being saved:
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+
 
     <%= form_with model: @book do |f| %>
-      <h4>Title</h4>
+      <h4>Title<br>
       <%= f.text_field :title %>
+      </h4>
 
-      <h4>Body</h4>
+      <h4>Body<br>
       <%= f.text_area :body %>
+      </h4>
 
       <h4>
       <%= f.submit 'Create Book' %>
       </h4>
     <% end %>
-
-
    </body>
 
   </html>
