--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,11 +8,11 @@
     <p class="notice">
       <%= notice %>
     </p>
-    <p>
+    <p class="show-text">
       <strong>Title:</strong>
       <%= @book.title %>
     </p>
-    <p>
+    <p class="show-text">
       <strong>Body:</strong>
       <%= @book.body %>
     </p>
