--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -8,12 +8,14 @@
 
   <h1>Editing Book</h1>
   <% if @book.errors.any? %>
+     <div id="error_explanation">
       <%= @book.errors.count %> errors prohibited this book from being saved:
       <ul>
         <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
         <% end %>
       </ul>
+      </div>
   <% end %>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
@@ -31,12 +33,12 @@
     </p>
 
     <% end %>
-  
+
 
     <%= link_to "Show", book_path(@book.id) %>
     |
     <%= link_to "Back", books_path(@books) %>
-  
+
   </body>
 
 </html>
