--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -40,12 +40,14 @@
 
     <h2>New book</h2>
     <% if @book.errors.any? %>
+    <div id="error_explanation">
       <%= @book.errors.count %> errors prohibited this book from being saved:
       <ul>
         <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
         <% end %>
       </ul>
+      </div>
     <% end %>
 
 
