--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,28 +38,26 @@
      </tbody>
     </table>
 
-    <h2>New book</h2>
+    <h1>New book</h1>
     <% if @book.errors.any? %>
     <div id="error_explanation">
+      <h2>
       <%= @book.errors.count %> errors prohibited this book from being saved:
+      </h2>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
         <% end %>
       </ul>
-      </div>
+    </div>
     <% end %>
 
-
     <%= form_with model: @book do |f| %>
-      <h4>Title<br>
+      <h4>Title</h4>
       <%= f.text_field :title %>
-      </h4>
-
-      <h4>Body<br>
+    </div>
+      <h4>Body</h4>
       <%= f.text_area :body %>
-      </h4>
-
       <h4>
       <%= f.submit 'Create Book' %>
       </h4>
